--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,10 @@
 # English strings go here for Rails i18n
 en:
+  project_module_weekly_scheduler: Weekly scheduler
   plugin_description: Weekly scheduler
 
   permission_view_schedule: View schedule
   permission_manage_schedule: Manage schedule
+
+  label_add_schedule: Add schedule
+  label_edit_schedule: Edit schedule
