Add issue association setting and ability to copy issue associations.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,3 +8,5 @@ en:
 
   label_add_schedule: Add schedule
   label_edit_schedule: Edit schedule
+
+  settings_associations: Issue associations to copy
