--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,7 @@
 ru:
   project_module_redmine_recurring_tasks: Redmine Recurring Tasks
   schedule: Расписание
+  template: Шаблон
   plugin_description: Плагин для создания запланированных задач из шаблона
 
   permission_view_schedule: Просмотр расписания
