Add new features and going to 0.1.0-dev

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,11 @@ en:
   schedule: Schedule
   template: Template
 
+  month: Month
+  week_day: Day of a week
+  month_day: Day of a month
+  last_day: Last day
+
   permission_view_schedule: View schedule
   permission_manage_schedule: Manage schedule
 
