--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -9,6 +9,8 @@ ru:
   month_day: День месяца
   last_day: Последний день
 
+  note: Вы можете выбрать день месяца или день недели, но не оба одновременно. И если вы выберете день месяца, затем выберите 31, но в текущем месяце только 28 дней, то задача не скопируется.
+
   permission_view_schedule: Просмотр расписания
   permission_manage_schedule: Управление расписанием
 
