--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,3 +19,4 @@ en:
   label_edit_schedule: Edit schedule
 
   settings_associations: Issue associations to copy
+  settings_use_anonymous_user: Use anonymous user while copying issues
